[package]
name = "sol-stream-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
borsh = "0.9.3"
rocket_cors = {git = "https://github.com/lawliet89/rocket_cors", branch = "master"}
solana-client = "1.11.4"
solana-account-decoder = "1.11.4"
serde = "1.0.141"
solana-sdk = "1.11.4"
diesel = { version = "1.4.8", features = ["mysql"] }
dotenv = "0.15.0"
